# CLIC-Net

./: .gitignore  README.md  pyproject.toml  run_clicnet_pipeline.sh
notebook/: 1_data_preparation.ipynb  2_pretrain_clicnet.ipynb  3_finetune_clicnet.ipynb  4_pretrain_leadprior.ipynb  5_finetune_leadprior.ipynb  6_pretrain_cnntransformer.ipynb  7_finetune_cnntransformer.ipynb  8_pretrain_model_comparison.ipynb  9_finetune_model_comparison.ipynb
outputs/2_pretrain_clicnet/20260615_031223/configs/: clicnet_architecture_config.json  config.json  train_beat_balance_summary.csv
outputs/2_pretrain_clicnet/20260615_031223/metrics/: classification_report.csv  f1_score_summary.csv  final_metrics.csv  learned_class_lead_mask.csv  learned_mask_clinical_overlap.csv  learned_mask_clinical_overlap_matrix.csv  metrics.csv  pretrain_clicnet_summary.csv  test_confusion_matrix.csv  test_counterfactual_logit_drop_details.csv  test_counterfactual_logit_drop_heatmap.csv  test_counterfactual_target_logit_drop_by_class.csv  test_f1_scores_by_class.csv  test_roc_curve.csv  val_confusion_matrix.csv  val_pr_curve.csv  val_roc_curve.csv
outputs/2_pretrain_clicnet/20260615_031223/transfer_ready/: model_config.json
outputs/3_finetune_clicnet/20260615_031345/aggregate_results/: all_fold_metrics.csv  average_metrics_by_strategy.csv  best_fold_ranking.csv
outputs/3_finetune_clicnet/20260615_031345/configs/: config.json  (+2 more)
outputs/8_pretrain_model_comparison/20260615_040102/: config.json  metrics_summary.csv
outputs/9_finetune_model_comparison/20260615_041131/: config.json  metrics_summary.csv
(+1249 files in other folders)
