[project]
name = "MI-Localization"
version = "0.1.0"
description = "Myocardial infarction classification experiments and notebooks."
requires-python = ">=3.10"
dependencies = [
    "fairseq-signals",
    "ipykernel>=6.29.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "wfdb>=4.1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
fairseq-signals = { git = "https://github.com/Jwoo5/fairseq-signals.git" }
